--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@main
 
-      - name: Setup Android NDK
-        uses: nttld/setup-ndk@main
-        id: setup-ndk
-        with:
-          ndk-version: r21e
-
       - name: Setup Java JDK
         uses: actions/setup-java@main
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
 
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
@@ -56,25 +50,22 @@ jobs:
       - name: Install Haxelib
         run: |
           haxelib setup ~/haxelib
-          haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib install lime 8.0.2
-          haxelib install openfl 9.2.2
-          haxelib --never install flixel 5.2.2
-          haxelib run lime setup flixel
+          haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp.git
+          haxelib git lime https://github.com/MobilePorting/lime-0.6.3.git 
+          haxelib install openfl 9.1.0
+          haxelib install flixel 4.11.0
           haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install flixel-addons 3.0.2
+          haxelib install flixel-addons 2.11.0
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hscript
           haxelib install hxCodec 2.6.1
           haxelib git linc_luajit https://github.com/mcagabe19/linc_luajit-legacy.git
-          haxelib install extension-androidtools
+          haxelib git extension-androidtools https://github.com/MobilePorting/extension-androidtools-0.6.3
           haxelib install hxcpp-debug-server
           haxelib list
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-
+      
       - name: Setup Lime
         run: |
           haxelib run lime setup -alias -y
@@ -82,17 +73,13 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 8.0.2
-          haxelib set openfl 9.2.2
+          haxelib set openfl 9.1.0
           haxelib set hxCodec 2.6.1
-          haxelib set flixel 5.2.2
-          haxelib set flixel-addons 3.0.2
-          haxelib set hxcpp 4.2.1
-        env:
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
+          haxelib set flixel 4.11.0
+          haxelib set flixel-addons 2.11.0
+      
       - name: Compile
-        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS --app-version="4.0.0-${{ github.run_id}}"
+        run: haxelib run lime build android
       
       - name: Clear Previous Cache
         uses: actions/github-script@main
@@ -134,4 +121,4 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: buildAndroid
-          path: export/release/android/bin/app/build/outputs/apk/debug
+          path: export/release/android/bin/app/build/outputs/apk/release/*.apk
