--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           haxelib install openfl 9.1.0
           haxelib install flixel 4.11.0
           haxelib install flixel-tools
-          haxelib install flixel-ui
+          haxelib install flixel-ui 2.4.0
           haxelib install flixel-addons 2.11.0
           haxelib install tjson
           haxelib install hxjsonast
@@ -76,6 +76,7 @@ jobs:
           haxelib set openfl 9.1.0
           haxelib set hxCodec 2.6.1
           haxelib set flixel 4.11.0
+          haxelib set flixel-ui 2.4.0
           haxelib set flixel-addons 2.11.0
       
       - name: Compile
