--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           haxelib install hscript
           haxelib install hxCodec 2.6.1
           haxelib git linc_luajit https://github.com/mcagabe19/linc_luajit-legacy.git
-          haxelib git extension-androidtools https://github.com/MobilePorting/extension-androidtools-0.6.3
+          haxelib install extension-androidtools
           haxelib install hxcpp-debug-server
           haxelib list
       
