--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           haxelib setup ~/haxelib
           haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp.git
           haxelib git lime https://github.com/MobilePorting/lime-0.6.3.git 
-          haxelib install openfl 9.1.0
+          haxelib git openfl https://github.com/Prohack101010/openfl-0.6.3
           haxelib install flixel 4.11.0
           haxelib install flixel-tools
           haxelib install flixel-ui 2.4.0
