--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,10 +53,10 @@ jobs:
           haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp.git
           haxelib git lime https://github.com/MobilePorting/lime-0.6.3.git 
           haxelib git openfl https://github.com/Prohack101010/openfl-0.6.3
-          haxelib install flixel 4.11.0
+          haxelib install flixel 5.2.2
           haxelib install flixel-tools
-          haxelib install flixel-ui 2.4.0
-          haxelib install flixel-addons 2.11.0
+          haxelib install flixel-ui
+          haxelib install flixel-addons 3.0.2
           haxelib install tjson
           haxelib install hxjsonast
           haxelib install hscript
@@ -73,11 +73,9 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set openfl 9.1.0
           haxelib set hxCodec 2.6.1
-          haxelib set flixel 4.11.0
-          haxelib set flixel-ui 2.4.0
-          haxelib set flixel-addons 2.11.0
+          haxelib set flixel 5.2.2
+          haxelib set flixel-addons 3.0.2
       
       - name: Compile
         run: haxelib run lime build android
