--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,8 @@ jobs:
       
       - name: Install Haxelib
         run: |
-          haxelib setup ~/haxelib
-          haxelib install hxcpp
-          haxelib install lime 7.9.0
+          haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp.git
+          haxelib git lime https://github.com/MobilePorting/lime-0.6.3.git
           haxelib install openfl 9.1.0
           haxelib install flixel 4.11.0
           haxelib install flixel-tools
@@ -74,6 +73,7 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib set hxCodec 2.6.1
+          haxelib set openfl 9.1.0
           haxelib set flixel 4.11.0
           haxelib set flixel-addons 2.11.0
       
